[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/Sprite1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameOverUi.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 112
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[node name="Gameoverui" type="Node2D"]
pause_mode = 2
visible = false
script = ExtResource( 3 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pause"]
position = Vector2( 360, 240 )
scale = Vector2( 30, 20 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Pause/Sprite"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Pause"]
margin_left = 153.349
margin_top = 55.9161
margin_right = 739.349
margin_bottom = 260.917
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="Pause"]
margin_left = 220.663
margin_top = 198.543
margin_right = 562.663
margin_bottom = 248.544
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "> retry?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Pause"]
margin_left = 226.326
margin_top = 251.4
margin_right = 568.326
margin_bottom = 301.401
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "> exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Pause/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Pause/Home" to="." method="_on_Home_pressed"]
